@@ -74,6 +74,16 @@
 ##'   that the sequence is then "2009-11-29 12:00:00", "2009-11-29 12:15:00"
 ##'   \ldots{} \code{start.date} is therefore used to force this type of
 ##'   sequence.
+##' @param vector.ws Should vector averaging be carried out on wind
+##' speed if available? The default is \code{FALSE} and scalar
+##' averages are calculated. Vector averaging of the wind speed is
+##' carried out on the u and v wind components. For example, consider
+##' the average of two hours where the wind direction and speed of the
+##' first hour is 0 degrees and 2m/s and 180 degrees and 2m/s for the
+##' second hour. The scalar average of the wind speed is simply the
+##' arithmetic average = 2m/s and the vector average is
+##' 0m/s. Vector-averaged wind speeds will always be lower than
+##' scalar-averaged values.
 ##' @export
 ##' @return Returns a data frame with date in class \code{POSIXct} and will
 ##'   remove any non-numeric columns except a column "site".
@@ -100,7 +110,8 @@
 ##'
 ##'
 timeAverage <- function(mydata, avg.time = "day", data.thresh = 0,
-                        statistic = "mean", percentile = NA, start.date = NA) {
+                        statistic = "mean", percentile = NA, start.date = NA,
+                        vector.ws = FALSE) {
 
     ## extract variables of interest
     vars <- names(mydata)
@@ -301,6 +312,9 @@ timeAverage <- function(mydata, avg.time = "day", data.thresh = 0,
                 ## correct for negative wind directions
                 ids <- which(dailymet$wd < 0)  ## ids where wd < 0
                 dailymet$wd[ids] <- dailymet$wd[ids] + 360
+
+                ## vector average ws
+                if (vector.ws) dailymet <- within(dailymet, ws <- (u ^ 2 + v ^ 2) ^ 0.5)
 
                 dailymet <- subset(dailymet, select = c(-u, -v))
             }
