@@ -3,7 +3,8 @@
 \title{Function to calculate timeAverages for data frames}
 \usage{
   timeAverage(mydata, avg.time = "day", data.thresh = 0,
-    statistic = "mean", percentile = NA, start.date = NA)
+    statistic = "mean", percentile = NA, start.date = NA,
+    vector.ws = FALSE)
 }
 \arguments{
   \item{mydata}{A data frame containing a \code{date} field
@@ -61,6 +62,18 @@
   sequence is then "2009-11-29 12:00:00", "2009-11-29
   12:15:00" \ldots{} \code{start.date} is therefore used to
   force this type of sequence.}
+
+  \item{vector.ws}{Should vector averaging be carried out
+  on wind speed if available? The default is \code{FALSE}
+  and scalar averages are calculated. Vector averaging of
+  the wind speed is carried out on the u and v wind
+  components. For example, consider the average of two
+  hours where the wind direction and speed of the first
+  hour is 0 degrees and 2m/s and 180 degrees and 2m/s for
+  the second hour. The scalar average of the wind speed is
+  simply the arithmetic average = 2m/s and the vector
+  average is 0m/s. Vector-averaged wind speeds will always
+  be lower than scalar-averaged values.}
 }
 \value{
   Returns a data frame with date in class \code{POSIXct}
