@@ -3,13 +3,13 @@
 \alias{windRose}
 \title{Traditional wind rose plot and pollution rose variation}
 \usage{
-  windRose(mydata, ws.int = 2, angle = 30, type =
-    "default", cols = "default", grid.line = NULL, width =
-    1, auto.text = TRUE, breaks = 4, offset = 10, paddle =
-    TRUE, key.header = NULL, key.footer = "(m/s)",
-    key.position = "bottom", key = TRUE, dig.lab = 5,
-    statistic = "prop.count", pollutant = NULL, annotate =
-    TRUE, ...)
+  windRose(mydata, ws = "ws", wd = "wd", ws.int = 2, angle
+    = 30, type = "default", cols = "default", grid.line =
+    NULL, width = 1, auto.text = TRUE, breaks = 4, offset =
+    10, paddle = TRUE, key.header = NULL, key.footer =
+    "(m/s)", key.position = "bottom", key = TRUE, dig.lab =
+    5, statistic = "prop.count", pollutant = NULL, annotate
+    = TRUE, ...)
 
   pollutionRose(mydata, pollutant = "nox", key.footer =
     pollutant, breaks = 6, paddle = FALSE, key.position =
@@ -18,6 +18,11 @@
 \arguments{
   \item{mydata}{A data frame containing fields \code{ws}
   and \code{wd}}
+
+  \item{ws}{Name of the column representing wind speed.}
+
+  \item{wd}{Name of the column representing wind
+  direction.}
 
   \item{ws.int}{The Wind speed interval. Default is 2 m/s
   but for low met masts with low mean wind speeds a value
