@@ -4,6 +4,7 @@ Changes in openair 0.5-15 [2011-12-08]
 *       Update to [IN DEVELOPMENT] GoogleMapsPlot.
 *	Tidy up calcFno2 plotting.
 *	Improve speed of timeAverage by removing date.pad.
+*	Add vector averaging option to timeAverage for wind speed.
 
 Changes in openair 0.5-14 [2011-11-29]
 =====================================
